--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,15 @@
 %html
   %head
     %title Citation Tools
+    = stylesheet_link_tag :application
     = csrf_meta_tags
 
   %body
-    = yield
+
+    - if flash.present?
+      %div.messages
+        - flash.each do |type, message|
+          %div.message{class:type}= message
+
+    #content
+      = yield
