Cleaned up display

--- a/app/views/papers/show.html.haml
+++ b/app/views/papers/show.html.haml
@@ -1,6 +1,7 @@
 %h3 References for DOI #{@paper.doi}
 
 .results
-  = text_area_tag :references_json, JSON.pretty_generate(@paper.references), readonly:true
+  .span9
+    = text_area_tag :references_json, JSON.pretty_generate(@paper.references), readonly:true
 
 %br
