--- a/app/views/results/_form.html.haml
+++ b/app/views/results/_form.html.haml
@@ -3,4 +3,4 @@
   = f.input  :query
   = f.input  :limit, as:'integer', input_html:{maxLength:'3'}
   .form-actions
-    = f.button :submit, name:nil, value:'Search', class:'btn-primary'
+    = f.button :submit, name:nil, value:'Search', class:'btn btn-primary'
