[#67349532] Link to a page with the results for a single citation

--- a/app/views/results/_display_form.html.haml
+++ b/app/views/results/_display_form.html.haml
@@ -28,9 +28,9 @@
       %tbody
         - @citations.each do |doi, info|
           %tr
-            %td= doi
-            %td= info[:citations]
-            %td= info[:median_ipms]
+            %td= link_to doi, cited_result_path(@result.token, doi)
+            %td.number= info[:citations]
+            %td.number= info[:ipms_count]
 
 %br
 %br
