--- a/app/views/results/index.html.haml
+++ b/app/views/results/index.html.haml
@@ -1,6 +1,11 @@
 %h3 Search Citations
 
-= render partial:'form'
+.span12
+  .span4
+    = render partial:'search_form'
+
+  .span4
+    = render partial:'analyze_form'
 
 %h3 Previous Searches
 
