--- a/app/views/layouts/viewer.html.haml
+++ b/app/views/layouts/viewer.html.haml
@@ -17,7 +17,9 @@
     = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
     = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
-    = javascript_include_tag "application"
+    = javascript_include_tag "react"
+    = javascript_include_tag "jquery"
+    = javascript_include_tag "references"
     = yield :head
 
   %body
