--- a/app/views/layouts/viewer.html.haml
+++ b/app/views/layouts/viewer.html.haml
@@ -18,6 +18,7 @@
     = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
     = javascript_include_tag "react"
+    = javascript_include_tag "lunr"
     = javascript_include_tag "jquery"
     = javascript_include_tag "references"
     = yield :head
