fix syntax error in plos-global.css

--- a/app/assets/stylesheets/plos-global.css
+++ b/app/assets/stylesheets/plos-global.css
@@ -1188,7 +1188,7 @@ ul#almSignPost li div.bottom div.center {
   width: 320px;
   position: absolute;
   top: -6px;
-  top: -10 px\0/;
+  top: -10 px;
   left: -6px;
   z-index: 9999;
   padding-top: 35px;
