add title to head

--- a/app/views/papers/view.html.erb
+++ b/app/views/papers/view.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  <%= @paper.references[:title] %>
+<% end %>
 <div id="page-wrap">
   <div id="pagebdy-wrap">
     <div id="pagebdy">
