--- a/app/views/papers/show.html.haml
+++ b/app/views/papers/show.html.haml
@@ -5,7 +5,7 @@
 
 .results
   .span9
-    = text_area_tag :references_json, JSON.pretty_generate(@paper.references), readonly:true
+    = text_area_tag :references_json, JSON.pretty_generate(@paper.result), readonly:true
     = link_to 'Download JSON', paper_path(@paper.doi, format:'json'), class:'btn btn-primary pull-right'
 
 %br
