--- a/app/views/results/_waiting_form.html.haml
+++ b/app/views/results/_waiting_form.html.haml
@@ -1,6 +1,6 @@
 %h3
   = image_tag('spinner.gif')
-  Analysing query '#{@result.query}' (limit #{@result.limit})
+  Analysing query '#{@result_set.query}' (limit #{@result_set.limit})
 
 -# Refresh the page in 30 seconds
 - content_for :head do
