--- a/app/views/papers/view.html.erb
+++ b/app/views/papers/view.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  <%= @paper.references[:title] %>
+  <%= @paper.info[:references][:title] %>
 <% end %>
 <div id="page-wrap">
   <div id="pagebdy-wrap">
@@ -19,7 +19,7 @@
             </span>
           </div>
           <h1 property="dc:title" datatype="" rel="dc:type" href="http://purl.org/dc/dcmitype/Text">
-            <%= @paper.references[:title] %>
+            <%= @paper.info[:references][:title] %>
           </h1>
           <ul class="authors">
             <% @xml.xpath("//article-meta/contrib-group/contrib[@contrib-type='author']").each do |author_node| %>
