--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -7,3 +7,7 @@ span.selfcitation {
 span.highlight {
     background-color: #fff700;
 }
+
+div.reference.selected {
+    background-color: #ffd8bd;
+}
