add support for repeated citation display

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -15,3 +15,9 @@ div.reference.selected {
 div.reference {
     margin-bottom: 1.5em;
 }
+
+div.citationGroup {
+    border-style: dashed;
+    border-width: 1pt;
+    margin: .5em;
+}
