collapse sort list

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -21,3 +21,12 @@ div.citationGroup {
     border-width: 1pt;
     margin: .5em;
 }
+
+ul.sorters {
+    display: inline
+}
+
+ul.sorters li {
+    display: inline;
+    list-style-type: none;
+}
