remove button styling

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -42,3 +42,9 @@ span.reference-journal {
 p.abstract {
     margin: 1em;
 }
+
+button.non-button {
+    background: none;
+    border: none;
+    color: #3C63AF; /* same as link */
+}
