--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -48,3 +48,15 @@ button.non-button {
     border: none;
     color: #3C63AF; /* same as link */
 }
+
+dl.appearances dt {
+    position: relative;
+    left: 0;
+    top: 1.1em;
+    width: 1em;
+}
+	
+dl.appearances dd {
+    margin: 0 0 0 1em;
+    padding: 0 0 .5em .5em;
+}
