make retracted flag red

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -64,3 +64,11 @@ dl.appearances dd {
 div.action-list {
     float: right;
 }
+
+span.retracted {
+    color: #FF0000;
+}
+
+span.updated {
+    color: #FF6B6B;
+}
