fix popover color

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -82,6 +82,6 @@ span.reference-doi {
 }
 
 .citation-popover{
-    border-color: #FFFFC5;
-    background-color: #F1F2F0;
+    border-color: #66CCFF;
+    background-color: #E9EBE7;
 }
