fix citation group background color

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -17,9 +17,8 @@ div.reference {
 }
 
 div.citationGroup {
-    border-style: dashed;
-    border-width: 1pt;
     margin: .5em;
+    background-color: #F3F3F4;
 }
 
 ul.sorters {
