add (somewhat broken) nav column

--- a/app/views/papers/view.html.erb
+++ b/app/views/papers/view.html.erb
@@ -35,6 +35,12 @@
           </ul>
         </div>
         <div class="main cf" id="pjax-container">
+          <div class="nav-col">
+            <div class="nav" id="nav-article-page">
+              <ul>
+                <li><a data-doi="${articleInfoX.doi}" id="nav-figures">Figures</a></li>
+              </ul>
+          </div>
           <div id="pjax-container" class="main cf">
             <div class="article">
               <% cache do %>
