--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -82,7 +82,7 @@ span.reference-doi {
 
 .citation-popover{
     border-color: #66CCFF;
-    background-color: #E9EBE7;
+    background-color: #F6F7F7;
 }
 
 form.search {
