add support for toc sidebar

--- a/app/views/papers/view.html.erb
+++ b/app/views/papers/view.html.erb
@@ -34,22 +34,65 @@
             <% end %>
           </ul>
         </div>
-        <div class="main cf" id="pjax-container">
+        <div class="main cf">
           <div class="nav-col">
             <div class="nav" id="nav-article-page">
               <ul>
-                <li><a data-doi="${articleInfoX.doi}" id="nav-figures">Figures</a></li>
+                <li><a data-doi="<%= @doi %>" id="nav-figures">Figures</a></li>
               </ul>
-          </div>
-          <div id="pjax-container" class="main cf">
-            <div class="article">
-              <% cache do %>
-                <%= render(partial: "transform").html_safe %>
-              <% end %>
             </div>
+            </div>
+          <div class="article">
+            <% cache do %>
+            <%= render(partial: "transform").html_safe %>
+            <% end %>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <!--This is the global footer for journals-->
+  <div id="pageftr">
+    <div class="ftr-cols cf">
+      <div class="col">
+        <div class="logo">
+          <img src="/images/logo.plos.ftr.gif" width="115" height="43" alt="PLOS">
+        </div>
+      </div>
+      <div class="col">
+        <div class="nav">
+          <div class="link"><a href="TEST">Journals</a></div>
+          <ul>
+            <li><a href="TEST">PLOS Biology</a></li>
+            <li><a href="TEST">PLOS Medicine</a></li>
+            <li><a href="TEST">PLOS Computational Biology</a></li>
+            <li><a href="TEST">PLOS Genetics</a></li>
+            <li><a href="TEST">PLOS Pathogens</a></li>
+            <li><a href="TEST">PLOS ONE</a></li>
+            <li><a href="TEST">PLOS Neglected Tropical Diseases</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col">
+        <div class="nav">
+          <div class="link"><a href="TEST">plos.org</a></div>
+          <div class="link"><a href="TEST">Blogs</a></div>
+          <div class="link"><a href="TEST">Collections</a></div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="copy"><img src="/images/icon.cc.16.png" width="16" height="16" alt="Creative Commons"> All site
+          content, except where otherwise noted, is licensed under a <a href="TEST">Creative Commons Attribution License</a>.</div>
+        <div class="nav">
+          <ul>
+            <li><a href="TEST">Privacy Policy</a></li>
+            <li><a href="TEST">Terms of Use</a></li>
+            <li><a href="TEST">Advertise</a></li>
+            <li><a href="TEST">Media Inquiries</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+                        
