fix update color

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -77,7 +77,7 @@ span.retracted {
 
 span.updated {
     @extend .badge;
-    background: #FF6B6B;
+    background: #2582CE;
 }
 
 span.reference-doi {
