use scrollbars if we have a very large citation group that overflows the window

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -87,6 +87,7 @@ span.reference-doi {
 .citation-popover{
     border-color: #66CCFF;
     background-color: #F6F7F7;
+    overflow: auto;
 }
 
 form.search {
