fix non-button background style

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -46,7 +46,7 @@ p.abstract {
 }
 
 button.non-button {
-    background-color: none;
+    background: none;
     border: none;
     color: #3C63AF; /* same as link */
 }
