fix self-citation, paywall style

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -1,5 +1,5 @@
 span.selfcitation {
-    background-color: #bbbbbb;
+    color: #bbbbbb;
 }
 
 span.highlight {
@@ -95,6 +95,10 @@ form.search {
 
 .text-available {
     color: #c9aa28;
+}
+
+.paywalled {
+    color: #f47e24;
 }
 
 .citation_hover {
