change self-citation badge per new wireframes

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -1,5 +1,10 @@
 span.selfcitation {
-    color: #bbbbbb;
+    border-color: #6a6a65;
+    color: #6a6a65;
+    border-style: solid;
+    border-width: 1px;
+    padding-left: .5em;
+    padding-right: .5em;
 }
 
 span.highlight {
