fix margin/padding for non-button buttons

--- a/app/assets/stylesheets/references.css.scss
+++ b/app/assets/stylesheets/references.css.scss
@@ -54,6 +54,8 @@ button.non-button {
     background: none;
     border: none;
     color: #3C63AF; /* same as link */
+    padding: 0px;
+    margin: 0px;
 }
 
 dl.appearances dt {
