--- a/app/views/papers/view.html.erb
+++ b/app/views/papers/view.html.erb
@@ -4,7 +4,7 @@
 <% end %>
 
 <# need this to deal with assets pipeline #>
-<%= javascript_tag("var spinnerPath = '#{image_path('spinner.gif')}';") %>
+<%= javascript_tag("var spinnerPath = '#{image_path('loader.gif')}';") %>
 
 <div id="page-wrap">
   <div id="pagebdy-wrap">
