fix sinon, needed for qunit

--- a/app/views/papers/_cite.html.haml
+++ b/app/views/papers/_cite.html.haml
@@ -1,6 +1,7 @@
 = render_paper_authors(cite)
 %br
-= cite[:title]
+%a{:href=>cite_href}
+  = cite[:title]
 %br
 %strong
   = cite['container-title'.intern]
