add 2 sample papers to front page

--- a/app/views/papers/index.html.haml
+++ b/app/views/papers/index.html.haml
@@ -4,4 +4,10 @@
   = label_tag(:doi, "DOI:")
   = text_field_tag(:doi)
   = submit_tag("Search")
-  
+
+%h3 Examples
+
+%ul
+  %li= link_to('Harris CR, Prouvost C (2014) Jealousy in Dogs. PLoS ONE 9(7): e94597.', '/view/10.1371/journal.pone.0094597')
+
+  %li= link_to('Hansen J, Kharecha P, Sato M, Masson-Delmotte V, Ackerman F, et al. (2013) Assessing “Dangerous Climate Change”: Required Reduction of Carbon Emissions to Protect Young People, Future Generations and Nature. PLoS ONE 8(12): e81648.', '/view/10.1371/journal.pone.0081648')
