--- a/app/views/papers/index.html.haml
+++ b/app/views/papers/index.html.haml
@@ -1,5 +1,8 @@
 %h3 Look up paper
 
+- if flash[:error].present?
+  %p{:class => 'text-error'}= flash[:error]
+
 = form_tag("/", method: "get") do
   = label_tag(:doi, "DOI:")
   = text_field_tag(:doi)
