new example papers

--- a/app/views/papers/index.html.haml
+++ b/app/views/papers/index.html.haml
@@ -13,4 +13,12 @@
 %ul
   %li= link_to('Harris CR, Prouvost C (2014) Jealousy in Dogs. PLoS ONE 9(7): e94597.', '/view/10.1371/journal.pone.0094597')
 
-  %li= link_to('Hansen J, Kharecha P, Sato M, Masson-Delmotte V, Ackerman F, et al. (2013) Assessing “Dangerous Climate Change”: Required Reduction of Carbon Emissions to Protect Young People, Future Generations and Nature. PLoS ONE 8(12): e81648.', '/view/10.1371/journal.pone.0081648')
+
+  %li= link_to('Sojo V, Pomiankowski A, Lane N (2014) A Bioenergetic Basis for Membrane Divergence in Archaea and Bacteria. PLoS Biol 12(8): e1001926.', '/view/10.1371/journal.pbio.1001926')
+  %li= link_to('Priest P, McKenzie JE, Audas R, Poore M, Brunton C, et al. (2014) Hand Sanitiser Provision for Reducing Illness Absences in Primary School Children: A Cluster Randomised Trial. PLoS Med 11(8): e1001700.', '/view/10.1371/journal.pmed.1001700')
+  %li= link_to('Cybulski JS, Clements J, Prakash M (2014) Foldscope: Origami-Based Paper Microscope. PLoS ONE 9(6): e98781.', '/view/10.1371/journal.pone.0098781')
+  %li= link_to('Jenkins R, Kerr C (2013) Identifiable Images of Bystanders Extracted from Corneal Reflections. PLoS ONE 8(12): e83325.', '/view/10.1371/journal.pone.0083325')
+  %li= link_to('Boutilier MSH, Lee J, Chambers V, Venkatesh V, Karnik R (2014) Water Filtration Using Plant Xylem. PLoS ONE 9(2): e89934.', '/view/10.1371/journal.pone.0089934')
+  %li= link_to('Clancy KBH, Nelson RG, Rutherford JN, Hinde K (2014) Survey of Academic Field Experiences (SAFE): Trainees Report Harassment and Assault. PLoS ONE 9(7): e102172.', '/view/10.1371/journal.pone.0102172')
+
+  -#li= link_to('Hansen J, Kharecha P, Sato M, Masson-Delmotte V, Ackerman F, et al. (2013) Assessing “Dangerous Climate Change”: Required Reduction of Carbon Emissions to Protect Young People, Future Generations and Nature. PLoS ONE 8(12): e81648.', '/view/10.1371/journal.pone.0081648')
