--- a/app/views/papers/index_api.html
+++ b/app/views/papers/index_api.html
@@ -1,21 +1,15 @@
-<h1 id="rich-citations-api-draft">Rich Citations API draft</h1>
+<h1 id="about-the-rich-citations-api">About the Rich Citations API</h1>
+<p>Rich Citations is a PLOS Labs project adding metadata to citation data in scientific articles and stores this information in a centralized database. This API allows you to access and scrape the Rich Citations database.</p>
 <h2 id="terminology">Terminology</h2>
-<ul>
-<li><em>paper</em>: a citable object with an identifer</li>
-<li><em>reference</em>: a reference from paper A to paper B with metadata</li>
-<li><em>citation</em>: a string in a paper which refers to a reference, e.g. <code>[1]</code></li>
-<li><em>citation group</em>: a group of citations in a paper, e.g. <code>[1],[8]</code></li>
-<li><em>reference metadata</em>: metadata about a reference in an article</li>
-<li><em>bibliographic metadata</em>: metadata about an article as returned by crossref, etc.</li>
-</ul>
+<p>For the definitions below, assume that you are reading a paper A, that contains in-text citations and references to other papers, including paper B. - <em>paper</em>: a citable object with an identifier, usually a scientific article - <em>reference</em>: a reference in paper A to paper B, containing metadata, usually at the end of the paper in the reference section - <em>citation</em>: a string in paper A which refers to paper B, e.g. <code>[1]</code>, usually the body of paper A - <em>citation group</em>: a group of citations in a paper, e.g. <code>[1],[8],[13]</code> or <code>[4]-[7]</code> - <em>reference metadata</em>: metadata about a reference in an article - <em>bibliographic metadata</em>: metadata about an article as returned by crossref, etc.</p>
 <h2 id="identifier-formats">Identifier formats</h2>
 <ul>
-<li>URIs should be used for all identifiers; this means that we do not external information to distinguish between a a DOI and an ISBN. Examples:
+<li>URIs should be used for all identifiers; this means that we do not use external information to distinguish between a a DOI and an ISBN. Examples:
 <ul>
 <li>DOI: <code>http://dx.doi.org/10.1371/journal.pone.0000000#pone.0000000-Doe1</code></li>
 <li>ISBN: <code>urn:isbn:0-486-27557-4</code></li>
-<li>Pubmed: <code>http://identifiers.org/pubmed/16381840</code></li>
-<li>PMC: <code>http://identifiers.org/pmc/PMC3531190</code></li>
+<li>PubMed: <code>http://identifiers.org/pubmed/16381840</code></li>
+<li>PubMed Commons (PMC): <code>http://identifiers.org/pmc/PMC3531190</code></li>
 <li>arxiv ID: <code>http://arxiv.org/abs/1407.4120</code></li>
 <li>NIHMS ID: ?</li>
 <li>github repo name/commit id:
@@ -27,7 +21,7 @@
 <li>URL: <code>http://example.org/</code></li>
 </ul></li>
 </ul>
-<h2 id="getting-the-reference-information-for-an-article">Getting the reference information for an article</h2>
+<h2 id="getting-the-reference-information-for-a-paper">Getting the reference information for a paper</h2>
 <pre><code>GET http://api.richcitations.org/v0/paper?id=http%3A%2F%2Fdx.doi.org%2F10.1371%2Fjournal.pone.0000000</code></pre>
 <p>This returns JSON describing the paper and its references:</p>
 <pre><code>{
@@ -49,19 +43,19 @@
     &quot;bibliographic&quot;: { … },
     &quot;citation_groups&quot;: [ … ]
 }</code></pre>
-<p>We distinguish between a paper and a reference. A paper is identified by a URI, e.g. <code>http://dx.doi.org/10.1234/1</code>. A reference is identified by a different URI. For PLOS papers this is the citing paper with an anchor link, e.g.: <code>http://dx.doi.org/10.1371/journal.pone.0000000#pone.0000000-Doe1</code>. In the reference metadata the <code>id</code> field identifies the reference, while <code>citing_id</code> identifies the <em>citing</em> paper and the <code>cited_id</code> fields identifies the <em>cited</em> paper.</p>
+<p>We distinguish between a paper and a reference. A paper is identified by a URI, e.g. <code>http://dx.doi.org/10.1371/journal.pone.0000000</code>. A reference is identified by a different URI. For PLOS papers this is the citing paper A with an anchor link, e.g.: <code>http://dx.doi.org/10.1371/journal.pone.0000000#pone.0000000-Doe1</code>. In the reference metadata the <code>id</code> field identifies the reference, while <code>citing_id</code> identifies the <em>citing</em> paper A and the <code>cited_id</code> fields identifies the <em>cited</em> paper B.</p>
 <h2 id="bibliographic-metadata">Bibliographic metadata</h2>
 <p>We use <a href="https://github.com/citation-style-language/schema/blob/master/csl-data.json">citeproc-json</a> as our format for bibliographic metadata, stored in the <code>bibliographic</code> fields above.</p>
-<p>In addition to the fields defined in the above document, we also include information about the item’s license in a <code>license</code> field. This field is a hash with a <code>url</code> field that links to information about the license.</p>
+<p>In addition to the fields defined in the above document, we also include information about Paper B's license in a <code>license</code> field. This field is a hash with a <code>url</code> field that links to information about the license.</p>
 <pre><code>{
     &quot;url&quot;: &quot;http://creativecommons.org/licenses/by/3.0/&quot;
 }</code></pre>
 <h2 id="citation-groups">Citation groups</h2>
-<p>A <em>citation group</em> describes a group of citations in a paper and is of the form:</p>
+<p>A <em>citation group</em> describes a group of citations in a paper. For PLOS, a citation's URL includes the author last name after a hyphen and is of the form:</p>
 <pre><code>{
     &quot;references&quot;: [
-        &quot;http://dx.doi.org/10.1371/journal.pone.0000000#pone.0000000-Doe1&quot;,
-        &quot;http://dx.doi.org/10.1371/journal.pone.0000000#pone.0000000-Roe1&quot;
+        &quot;http://dx.doi.org/10.1371/journal.pone.0000000#pone.0000000-PLOS1&quot;,
+        &quot;http://dx.doi.org/10.1371/journal.pone.0000000#pone.0000000-PLOS3&quot;
     ],
     &quot;context&quot;: {
         &quot;ellipses_before&quot;: true,
