--- a/app/views/papers/index_api.html
+++ b/app/views/papers/index_api.html
@@ -1,7 +1,15 @@
 <h1 id="about-the-rich-citations-api">About the Rich Citations API</h1>
 <p>Rich Citations is a PLOS Labs project adding metadata to citation data in scientific articles and stores this information in a centralized database. This API allows you to access and scrape the Rich Citations database.</p>
 <h2 id="terminology">Terminology</h2>
-<p>For the definitions below, assume that you are reading a paper A, that contains in-text citations and references to other papers, including paper B. - <em>paper</em>: a citable object with an identifier, usually a scientific article - <em>reference</em>: a reference in paper A to paper B, containing metadata, usually at the end of the paper in the reference section - <em>citation</em>: a string in paper A which refers to paper B, e.g. <code>[1]</code>, usually the body of paper A - <em>citation group</em>: a group of citations in a paper, e.g. <code>[1],[8],[13]</code> or <code>[4]-[7]</code> - <em>reference metadata</em>: metadata about a reference in an article - <em>bibliographic metadata</em>: metadata about an article as returned by crossref, etc.</p>
+<p>For the definitions below, assume that you are reading a paper A, that contains in-text citations and references to other papers, including paper B.</p>
+<ul>
+<li><em>paper</em>: a citable object with an identifier, usually a scientific article</li>
+<li><em>reference</em>: a reference in paper A to paper B, containing metadata, usually at the end of the paper in the reference section</li>
+<li><em>citation</em>: a string in paper A which refers to paper B, e.g. <code>[1]</code>, usually the body of paper A</li>
+<li><em>citation group</em>: a group of citations in a paper, e.g. <code>[1],[8],[13]</code> or <code>[4]-[7]</code></li>
+<li><em>reference metadata</em>: metadata about a reference in an article</li>
+<li><em>bibliographic metadata</em>: metadata about an article as returned by crossref, etc.</li>
+</ul>
 <h2 id="identifier-formats">Identifier formats</h2>
 <ul>
 <li>URIs should be used for all identifiers; this means that we do not use external information to distinguish between a a DOI and an ISBN. Examples:
