update license statement

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,4 +65,5 @@
           = yield
     
       %footer
-        %p &copy; PLOS Labs 2014
+        %p &copy; All data available under a CC0 license. All content and documentation available under a CC-BY 4.0 license.
+
