--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,4 +65,19 @@
           = yield
     
       %footer
-        %p &copy; PLOS Labs 2014
+        %p
+          &copy; PLOS Labs, 2014.
+          %br
+          All data available under a
+          <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 license.</a>
+          <a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/">
+          <img src="http://i.creativecommons.org/p/zero/1.0/80x15.png" style="border-style: none;" alt="CC0" />
+          </a>
+          %br
+          All content and documentation licensed under a
+          <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+          Creative Commons Attribution 4.0 International License</a>.
+          <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+          <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
+          </a>
+
