--- a/app/views/layouts/viewer.html.haml
+++ b/app/views/layouts/viewer.html.haml
@@ -5,7 +5,7 @@
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
     %meta(name="citation_doi" content="#{@doi}")
-    %title= content_for?(:title) ? "#{yield(:title)} - Citation Tools" : "PLOS Citation-Tools"
+    %title= content_for?(:title) ? "#{yield(:title)} - Rich Citations" : "Rich Citations"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
